--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - ./html:/usr/share/nginx/html/html
       - ./css:/usr/share/nginx/html/css
       - ./js:/usr/share/nginx/html/js
+    command: /bin/sh -c "cp /usr/share/nginx/html/index.html /usr/share/nginx/html/index.html.bak && rm -f /usr/share/nginx/html/index.html && cp /usr/share/nginx/html/index.html.bak /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
+
