--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
       - "4567:80"
     volumes:
       - ./assets:/usr/share/nginx/html/assets
-      - ./index.html:/usr/share/nginx/html/index.html
-      - ./html:/usr/share/nginx/html/html
+      - ./html:/usr/share/nginx/html/
       - ./css:/usr/share/nginx/html/css
       - ./js:/usr/share/nginx/html/js
     command: /bin/sh -c "cp /usr/share/nginx/html/index.html /usr/share/nginx/html/index.html.bak && rm -f /usr/share/nginx/html/index.html && cp /usr/share/nginx/html/index.html.bak /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
